# mini-pixel-tool

./: .gitignore  MANIFEST.in  main.py  make.py  pixel.py  pyproject.toml  requirements.txt
src/mini_pixel/: __init__.py  colors.py
